<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/toolbar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/title_cart"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_sort"
        android:icon="@drawable/ic_filter"
        android:title="@string/filterby"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toolbar_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>